[gd_scene load_steps=29 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://images/random/circle.png" type="Texture" id=2]
[ext_resource path="res://walker.gd" type="Script" id=4]
[ext_resource path="res://images/girl.png" type="Texture" id=5]
[ext_resource path="res://Enemies.gd" type="Script" id=6]
[ext_resource path="res://images/random/icons/franxprix2.png" type="Texture" id=8]
[ext_resource path="res://images/random/icons/groceries.png" type="Texture" id=9]
[ext_resource path="res://gocerystore.gd" type="Script" id=10]
[ext_resource path="res://images/random/icons/home.png" type="Texture" id=11]
[ext_resource path="res://home-script.gd" type="Script" id=12]
[ext_resource path="res://images/random/icons/pharmacy.png" type="Texture" id=13]
[ext_resource path="res://pharmacy.gd" type="Script" id=14]
[ext_resource path="res://images/random/icons/drugs.png" type="Texture" id=15]
[ext_resource path="res://interface.gd" type="Script" id=16]
[ext_resource path="res://images/random/icons/health.png" type="Texture" id=17]
[ext_resource path="res://images/random/icons/score.png" type="Texture" id=18]
[ext_resource path="res://drawline.gd" type="Script" id=19]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 410.688, -118.052, 0, 0, 0, 0, 689.196, 91.1353, 0, 0, 0, 0, 785.473, 104.234, 0, 0, 0, 0, 1036.32, 216.23, 0, 0, 0, 0, 1177.78, 263.386, 0, 0, 0, 0, 1350.04, 161.869, 0, 0, 0, 0, 1643.32, 41.2285, 0, 0, 0, 0, 1131.15, 285.523, 0, 0, 0, 0, 852.146, 157.154, 0, 0, 0, 0, 1165.21, -79.9363 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 407.57, -51.6427, 0, 0, 0, 0, 576.545, 157.94, 0, 0, 0, 0, 279.855, 290.893, 0, 0, 0, 0, 322.36, 328.08, 0, 0, 0, 0, 398.015, 378.942, 0, 0, 0, 0, 254.047, 479.94, 0, 0, 0, 0, 395.077, 377.473, 0, 0, 0, 0, 596.194, 213.61, 0, 0, 0, 0, 366.963, -96.8339 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 368.042, 83.3895, 0, 0, 0, 0, 599.189, 92.9962, 0, 0, 0, 0, 770.749, 146.97, 0, 0, 0, 0, 1027.77, 33.239, 0, 0, 0, 0, 1056.3, -42.5818 )
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.602617, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12, 15, 15 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.796451 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 11 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 7 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00886587, 0.797929 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16, 19 ]
}

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 265.461, 164.816 )

[sub_resource type="CircleShape2D" id=13]
radius = 238.278

[node name="Dungeon" type="Node2D"]
position = Vector2( -271.593, 267.494 )

[node name="Floor" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
centered_textures = true
format = 1
tile_data = PoolIntArray( -917493, 0, 0, -917492, 0, 0, -917491, 0, 0, -917490, 0, 0, -851957, 0, 0, -851956, 0, 0, -851955, 0, 0, -851954, 0, 0, -786421, 0, 0, -786420, 1, 0, -786419, 0, -1200553578, -786418, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, -1200553578, -720882, 0, 0, -655349, 0, 0, -655348, 1, 0, -655347, 0, -1200553578, -655346, 0, 0, -589813, 0, 0, -589812, 1, 0, -589811, 0, -1200553578, -589810, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 1, -1200553578, -524274, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, -1200553578, -458738, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, -1200553578, -393202, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 1, 0, -327669, 1, 0, -327668, 1, 0, -327667, 0, -1200553578, -327666, 0, 0, -262142, 1, 0, -262141, 0, 0, -262140, 1, 0, -262139, 1, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, -1200553578, -262133, 0, -1200553578, -262132, 0, -1200553578, -262131, 0, -1200553578, -262130, 0, 0, -196606, 0, 0, -196605, 1, 0, -196604, 1, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, -1200553578, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -65539, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 1, 0, -65528, 0, 0, -65527, 0, 0, 5, 0, 0, 6, 0, 0, 7, 1, 0, 8, 0, 0, 9, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, -1200553578, 65544, 0, -1200553578, 65545, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, -1200553578, 131080, 0, -1200553578, 131081, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0 )

[node name="Walls" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -917493, 2, -1200553578, -917492, 2, -1200553578, -917491, 2, -1200553578, -917490, 2, -1200553578, -917489, 2, -1200553578, -851957, 2, -1200553578, -851956, 3, -1200553578, -851954, 3, -1200553578, -851953, 2, -1200553578, -786421, 2, -1200553578, -786420, 3, -1200553578, -786418, 3, -1200553578, -786417, 2, -1200553578, -720885, 2, -1200553578, -720881, 2, -1200553578, -655349, 2, -1200553578, -655348, 2, -1200553578, -655346, 3, -1200553578, -655345, 2, -1200553578, -589813, 2, -1200553578, -589809, 2, -1200553578, -524277, 2, -1200553578, -524273, 2, -1200553578, -458747, 2, -1200553578, -458746, 2, 0, -458745, 2, 0, -458742, 2, 0, -458741, 2, 0, -458740, 2, 0, -458738, 2, 0, -458737, 2, -1200553578, -393211, 2, 0, -393201, 2, -1200553578, -327665, 2, -1200553578, -262129, 2, -1200553578, -196593, 2, -1200553578, -131062, 2, 0, -131061, 2, -1200553578, -131060, 2, -1200553578, -131059, 2, -1200553578, -131058, 2, -1200553578, -131057, 2, -1200553578, -65527, 0, 0, -65526, 2, 0, 10, 2, 0, 65541, 2, 0, 65546, 2, 0, 131077, 2, 0, 131081, 0, 0, 131082, 2, 0, 196613, 2, 0, 196615, 0, 0, 196617, 0, 0, 196618, 2, 0, 262149, 2, -1200553578, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262154, 2, 0, 393217, 0, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="Walls"]

[node name="interface" type="Node2D" parent="Walls/CanvasLayer"]
position = Vector2( -274.593, 267.494 )
script = ExtResource( 16 )

[node name="score" type="RichTextLabel" parent="Walls/CanvasLayer/interface"]
margin_left = 1159.76
margin_top = -236.388
margin_right = 1276.76
margin_bottom = -197.388
text = "421311"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="damage" type="RichTextLabel" parent="Walls/CanvasLayer/interface"]
margin_left = 1155.76
margin_top = -211.388
margin_right = 1267.76
margin_bottom = -184.388
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "1231312"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Sprite" parent="Walls/CanvasLayer/interface"]
position = Vector2( 1131.12, -195.762 )
scale = Vector2( 0.129167, 0.129167 )
texture = ExtResource( 17 )

[node name="score2" type="Sprite" parent="Walls/CanvasLayer/interface"]
position = Vector2( 1135.06, -231.527 )
scale = Vector2( 0.0373771, 0.0373771 )
texture = ExtResource( 18 )

[node name="drawLine" type="Node2D" parent="Walls"]
position = Vector2( 271.593, -267.494 )
script = ExtResource( 19 )

[node name="Enemie" type="Node2D" parent="Walls"]
script = ExtResource( 6 )

[node name="EnemyPaths" type="Node2D" parent="Walls/Enemie"]

[node name="path1" type="Path2D" parent="Walls/Enemie/EnemyPaths"]
curve = SubResource( 1 )

[node name="path2" type="Path2D" parent="Walls/Enemie/EnemyPaths"]
curve = SubResource( 4 )

[node name="path3" type="Path2D" parent="Walls/Enemie/EnemyPaths"]
position = Vector2( 0.649658, 0 )
scale = Vector2( 0.999261, 1 )
curve = SubResource( 5 )

[node name="main_characterKinematic" type="KinematicBody2D" parent="Walls"]
position = Vector2( 781.759, 34.8229 )
script = ExtResource( 4 )

[node name="main_char_node" type="Node2D" parent="Walls/main_characterKinematic"]

[node name="main_character" type="Sprite" parent="Walls/main_characterKinematic/main_char_node"]
position = Vector2( -0.372681, -18.3152 )
texture = ExtResource( 5 )
vframes = 5
hframes = 4
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Walls/main_characterKinematic/main_char_node/main_character"]
playback_speed = 4.0
anims/down = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/left = SubResource( 8 )
anims/right = SubResource( 9 )
anims/up = SubResource( 10 )

[node name="circle" type="Sprite" parent="Walls/main_characterKinematic/main_char_node"]
position = Vector2( -0.372681, -18.3152 )
scale = Vector2( 0.14111, 0.14111 )
texture = ExtResource( 2 )

[node name="groceries" type="Sprite" parent="Walls/main_characterKinematic/main_char_node"]
position = Vector2( 0.497437, -66.2536 )
scale = Vector2( 0.0715417, 0.0715417 )
texture = ExtResource( 9 )

[node name="drugs" type="Sprite" parent="Walls/main_characterKinematic/main_char_node"]
position = Vector2( 2.63306, -63.1027 )
scale = Vector2( 0.0651113, 0.0651113 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/main_characterKinematic"]
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="Walls/main_characterKinematic"]
position = Vector2( -0.621399, -4.11151 )
current = true

[node name="home" type="Area2D" parent="Walls"]
position = Vector2( 1035.69, -0.76947 )
scale = Vector2( 0.135509, 0.135509 )
script = ExtResource( 12 )

[node name="home" type="Sprite" parent="Walls/home"]
position = Vector2( -117.362, -66.1494 )
scale = Vector2( 2.98382, 2.98382 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/home"]
position = Vector2( -145.103, 93.8899 )
shape = SubResource( 12 )

[node name="franprix" type="Area2D" parent="Walls"]
position = Vector2( 265.501, 418.191 )
scale = Vector2( 0.135509, 0.135509 )
script = ExtResource( 10 )

[node name="franxprix2" type="Sprite" parent="Walls/franprix"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/franprix"]
position = Vector2( -17.0334, 92.8735 )
shape = SubResource( 13 )

[node name="pharmacy" type="Area2D" parent="Walls"]
position = Vector2( 380.754, 71.1667 )
scale = Vector2( 0.135509, 0.135509 )
script = ExtResource( 14 )

[node name="pharmacy" type="Sprite" parent="Walls/pharmacy"]
scale = Vector2( 2.1573, 2.1573 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/pharmacy"]
position = Vector2( 0.817871, 8.84888 )
shape = SubResource( 13 )

[node name="Navigation2D" type="Navigation2D" parent="."]
[connection signal="body_entered" from="Walls/home" to="Walls/home" method="_on_home_body_entered"]
[connection signal="body_entered" from="Walls/franprix" to="Walls/Enemie" method="_on_franprix_body_entered"]
[connection signal="body_entered" from="Walls/franprix" to="Walls/franprix" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Walls/pharmacy" to="Walls/pharmacy" method="_on_pharmacy_body_entered"]
